@@ -3,6 +3,8 @@
 * Improved detection of mobile WebKit browser version.
 * Detecting Chrome Frame agent string on subrequests now, added unit test for:
   - Internet Explorer with Chrome Frame extension on Windows 7.
+* Detecting Windows Phone, added unit test for:
+  - Nokia Lumia 520, running Windows Phone 8.0, IE Mobile 10.0.
 * Added unit tests for:
   - Mobile WebKit browser inside 1Password app on iPad.
   - MSIE 6.0 with Chrome Frame 11.0 extension.
